...
        filterUI.crescente.isSelected = filter.order == .ASCENDING
        filterUI.formatButton(button: filterUI.crescente)

        filterUI.decrescente.isSelected = filter.order == .DESCENDING
        filterUI.formatButton(button: filterUI.decrescente)

        navigationItem.title = "Filtrar"
        let cleanFilterButton = UIBarButtonItem(
            title: "Limpar",
            style: .plain,
            target: self,
            action: #selector(cleanFilters)
        )
...
