...
        searchButton.tintColor = .white
        filterButton.tintColor = .white
        backButton.tintColor = .white

        navigationItem.rightBarButtonItems = [filterButton, searchButton]
        navigationItem.backBarButtonItem = backButton
        navigationItem.title = "Github"
        let textAttributes = [NSAttributedString.Key.foregroundColor: UIColor.white]
        navigationController?.navigationBar.titleTextAttributes = textAttributes
    }

    @objc func openFilter() {
        coordinator?.openFilter()
...
